# todoc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  task.json
frontend/: index.html
tests/: test_service.py
todoc/: __main__.py  exceptions.py
todoc/cli/: board.py  daemon.py  formatter.py  main.py  tui.py
todoc/config/: settings.py
todoc/core/: models.py  service.py
todoc/storage/: repository.py
todoc/sync/: notion.py
